--- a/ML_Day3.ipynb
+++ b/ML_Day3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ML_Day3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNUyaNzi9HngQ2/wyRgvF+z",
+      "authorship_tag": "ABX9TyPZ4odGzedEwzt9GIKVvJfL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "d-qezKLKlsri"
+      },
+      "source": [
+        "import numpy as np\n",
+        "import seaborn as sns"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GdSNxWw8lDAr"
       },
       "source": [
         ""
